Atualiza frontend: cálculo validado e datas pt-BR

--- a/templates/calculo.html
+++ b/templates/calculo.html
@@ -59,10 +59,13 @@
         R$ <span id="valor-resultado">1.365,88</span>
     </div>
 
-    <div class="resultado-info">
-        <p><strong>Índice:</strong> IGPM</p>
-        <p><strong>Período:</strong> 01/09/2020 até 01/08/2023</p>
-    </div>
+<div class="resultado-info">
+    <p><strong>Índice:</strong> <span id="resultado-indice"></span></p>
+    <p><strong>Período:</strong>
+        <span id="resultado-inicio"></span> até
+        <span id="resultado-fim"></span>
+    </p>
+</div>
 
 </div>
 
